--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>custom_greeting</title>
     <base href="/">
-    <link type="text/css" rel="stylesheet" href="main.css" />
- </head>
+ <script src="index.js"></script></head>
  <body>
     <div id="app"></div>
  </body>
